samples/_failures_safe/1761085427_82c943_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9a51836.c: In function ‘main’:
./samples/SAFE/__tmp_d9a51836.c:168:12: error: missing terminating " character
  168 |     printf("Enter input to tokenize (max %d
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d9a51836.c:168:5: error: expected expression at end of input
  168 |     printf("Enter input to tokenize (max %d
      |     ^~~~~~
./samples/SAFE/__tmp_d9a51836.c:168:5: error: expected declaration or statement at end of input
